# noun-hub

./: .gitignore  NounHub_PRD.md
backend/: .dockerignore  Backend_PRD.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sst.config.ts
backend/functions/: handler.py
backend/functions/auth/: __init__.py  login.py  post_confirmation.py  register.py
backend/functions/lib/: auth.py  db.py  response.py
backend/functions/models/: user.py
backend/infrastructure/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  api-docs.ts  auth_design.md  index.ts  merged-swagger.json  package-lock.json  package.json  swagger-combine.config.json  swagger-hosting.ts
backend/infrastructure/modules/: auth.ts  database.ts
backend/lambda/auth/: README.md  build.sh  go.mod  go.sum  main.go
backend/lambda/auth/docs/: docs.go  swagger.json  swagger.yaml
backend/lambda/auth/google/: oauth.go
backend/lambda/go/: go.sum
backend/lambda/go/auth/: go.mod  main.go
backend/lambda/go/auth/docs/: docs.go  swagger.json  swagger.yaml
backend/lambda/go/feed/: README.md  build.sh  go.mod  go.sum  main.go
backend/lambda/go/feed/docs/: docs.go  swagger.json  swagger.yaml
backend/lambda/go/shared/api/: response.go
backend/src/: go.mod  lambda.go
backend/stacks/: ApiStack.ts  AuthStack.ts  StorageStack.ts
mobile/: Mobile_PRD.md
